# Lab-Project-CMSIS-Packs-Demos

./: .gitignore  IoT.csolution.yml  LICENSE  README.md  build.sh  config.sh  install_cpacks.sh  run.sh
AWS_MQTT_MutualAuth_Demo/: AWS_MQTT_MutualAuth_Demo.Release+AVH_MPS3_Corstone-300.cprj  AWS_MQTT_MutualAuth_Demo.cproject.yml
AWS_MQTT_MutualAuth_Demo/AWS_MQTT_MutualAuth_Demo.Release+AVH_MPS3_Corstone-300_IntDir/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
AWS_MQTT_MutualAuth_Demo/AWS_MQTT_MutualAuth_Demo.Release+AVH_MPS3_Corstone-300_OutDir/: AWS_MQTT_MutualAuth_Demo.Release+AVH_MPS3_Corstone-300.axf  AWS_MQTT_MutualAuth_Demo.Release+AVH_MPS3_Corstone-300.clog
AWS_MQTT_MutualAuth_Demo/Board/AVH_MPS2_Cortex-M7/: Board.clayer.yml
AWS_MQTT_MutualAuth_Demo/RTE/_AWS_MQTT_MutualAuth_Demo.Release_AVH_MPS3_Corstone-300/: RTE_Components.h
AWS_MQTT_MutualAuth_Demo/amazon-freertos/demos/include/: aws_clientcredential.h  aws_clientcredential_keys.h
Interface/transport/IoT_Socket/: Interface.clayer.yml  tls_helper.h
aws_mqtt_mutual_auth/: AWS_MQTT_MutualAuth_Demo.cproject.yml
aws_mqtt_mutual_auth/amazon-freertos/demos/include/: aws_clientcredential_keys.h
common/logging/: iot_logging_task_dynamic_buffers.c  logging.clayer.yml
common/mbedtls_alt/: mbedtls_alt.clayer.yml  mbedtls_freertos_alt.c
common/mqtt_agent/: mqtt_agent.clayer.yml  mqtt_agent_task.c  mqtt_agent_task.h
micro_speech/: Microspeech_Demo.cproject.yml  microspeech.c
micro_speech/Board/AVH_MPS2_Cortex-M7/: README.md
micro_speech/Board/AVH_MPS3_Corstone-300/: fvp_config.txt
micro_speech/RTE/_Microspeech_Demo.Debug_AVH_MPS3_Corstone-300/: Pre_Include_Global.h  RTE_Components.h
micro_speech/RTE/_Microspeech_Demo.Release_AVH_MPS3_Corstone-300/: Pre_Include_Global.h  RTE_Components.h
micro_speech/config_files/: aws_clientcredential_keys.h
micro_speech/src/: command_responder.cc  main_functions.cc
mqtt_mutual_auth/: AWS_MQTT_MutualAuth_Demo.cproject.yml  app_main.c  mqtt_demo_mutual_auth.c  mqtt_demo_pub_sub.c  transport_interface_api.h  transport_interface_ext.h
mqtt_mutual_auth/Board/AVH_MPS2_Cortex-M7/: fvp_config.txt
mqtt_mutual_auth/Board/IMXRT1050-EVKB/: Board.clayer.yml
mqtt_mutual_auth/Interface/AWS/Socket/: transport_interface_iot_socket.c
mqtt_mutual_auth/Interface/pkcs11/custom/: Interface.clayer.yml
mqtt_mutual_auth/Interface/transport/IoT_Socket/: Interface.clayer.yml  transport_interface_iot_socket.c  transport_tls_iot_socket.c
mqtt_mutual_auth/amazon-freertos/libraries/abstractions/secure_sockets/include/: iot_secure_sockets.h
mqtt_mutual_auth/config_files/: aws_mbedtls_config.h  demo_config.h
mqtt_mutual_auth/pkcs11/: core_pkcs11_pal.c
mqtt_mutual_auth/tls/: iot_tls.h
mqtt_pub_sub/: AWS_MQTT_PubSub_Demo.cproject.yml  app_main.c  mqtt_demo_mutual_auth.c  mqtt_demo_pub_sub.c
mqtt_pub_sub/Board/IMXRT1050-EVKB/: IMXRT1050-EVKB.mex
mqtt_pub_sub/Interface/mqtt_agent/freertos/: Interface.clayer.yml
mqtt_pub_sub/Interface/transport/IoT_Socket/: Interface.clayer.yml  tls_helper.c  transport_tls_iot_socket.c
mqtt_pub_sub/RTE/RTOS/: FreeRTOSConfig.h
mqtt_pub_sub/config_files/: core_mqtt_config.h  demo_config.h
tools/provision/: aws_clientcredential_keys.h.jinja2  configure_creds.py
